2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineCellRenderer.cpp: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* ScriptEditor.cpp:
	* OutlineCellRenderer.cpp: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineCellRenderer.cpp: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* LODEditor.xml:
	* url_error.wrl:
	* TextEditor.xml:
	* LightEditor.xml:
	* InlineEditor.xml:
	* TextureEditor.xml:
	* ViewpointEditor.xml:
	* NodePropertiesEditor.xml: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Console.xml:
	* Console.h:
	* Console.cpp:
	* ScriptEditor.h:
	* X3DConsoleInterface.h:
	* ScriptEditor.cpp:
	* X3DConsoleInterface.cpp: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* ScriptEditor.xml:
	* X3DUserInterface.cpp:
	* ScriptEditor.h:
	* ScriptEditor.cpp:
	* X3DScriptEditorInterface.h:
	* X3DScriptEditorInterface.cpp: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* NodeIndex.cpp: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* ScriptEditor.h:
	* ScriptEditor.cpp: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Console.h:
	* ScriptEditor.xml:
	* BrowserWindow.xml:
	* ScriptEditor.h:
	* ScriptEditor.cpp:
	* X3DScriptEditorInterface.h:
	* X3DScriptEditorInterface.cpp:
	* OutlineCellRenderer.cpp: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* UserData.h:
	* MagicImport.h:
	* MagicImport.cpp:
	* X3DBaseInterface.h:
	* X3DBaseInterface.cpp:
	* X3DBrowserWidget.h:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWidget.cpp:
	* NodeIndex.cpp:
	* ScriptEditor.cpp:
	* OutlineUserData.h:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeObserver.cpp:
	* X3DExportedNodesEditor.h:
	* X3DExportedNodesEditor.cpp:
	* OutlineCellRenderer.cpp: 
