@@ -183,7 +183,7 @@
                         <property name="valign">start</property>
                         <property name="label" translatable="yes">Load State</property>
                         <property name="use_underline">True</property>
-                        <property name="stock_id">gtk-no</property>
+                        <property name="stock_id">gtk-yes</property>
                         <signal name="clicked" handler="on_loadState_clicked" swapped="no"/>
                       </object>
                       <packing>
