@@ -1,3 +1,8 @@
+2014-08-24  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Layout.cpp:
+	* OrthoViewpoint.cpp: 
+
 2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* ExternProtoDeclaration.cpp: 
